<resources>
    <string name="app_name">Humanity</string>
    <string name="home">Home</string>
    <string name="ego">Ego</string>
    <string name="giving">Giving</string>
    <string name="happiness">Happiness</string>
    <string name="kindness">Kindness</string>
    <string name="optimism">Optimism</string>
    <string name="respect">Respect</string>
    <string name="giving_flowers_gif">Giving flowers gif</string>
    <string name="happy_dog_gif">Happy dog gif</string>
    <string name="the_cat_holds_its_umbrella_to_the_mouse">The cat holds its umbrella to the mouse.</string>
    <string name="gif_of_a_glass_half_full">Gif of a glass half full</string>
    <string name="press_f_to_pay_respects">Press F to pay respects</string>
    <string name="f">F</string>
    <string name="giving_respect_gif">Giving respect gif</string>
</resources>