<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.dogactanriverdi.humanity.presentation.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/givingFragment"
        android:name="com.dogactanriverdi.humanity.presentation.giving.GivingFragment"
        android:label="@string/giving"
        tools:layout="@layout/fragment_giving" />
    <fragment
        android:id="@+id/happinessFragment"
        android:name="com.dogactanriverdi.humanity.presentation.happiness.HappinessFragment"
        android:label="@string/happiness"
        tools:layout="@layout/fragment_happiness" />
    <fragment
        android:id="@+id/kindnessFragment"
        android:name="com.dogactanriverdi.humanity.presentation.kindness.KindnessFragment"
        android:label="@string/kindness"
        tools:layout="@layout/fragment_kindness" />
    <fragment
        android:id="@+id/optimismFragment"
        android:name="com.dogactanriverdi.humanity.presentation.optimism.OptimismFragment"
        android:label="@string/optimism"
        tools:layout="@layout/fragment_optimism" />
    <fragment
        android:id="@+id/respectFragment"
        android:name="com.dogactanriverdi.humanity.presentation.respect.RespectFragment"
        android:label="@string/respect"
        tools:layout="@layout/fragment_respect" />
</navigation>