<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".presentation.respect.RespectFragment">

    <ImageView
        android:id="@+id/ivRespect"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:contentDescription="@string/giving_respect_gif"
        android:scaleType="centerCrop"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvPressFToPayRespects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/press_f_to_pay_respects"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnF"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/f"
        android:textSize="17sp"
        android:textStyle="bold" />

</LinearLayout>