<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".presentation.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switchHappiness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:thumbTint="@drawable/custom_switch_thumb"
                app:trackTint="@drawable/other_switches_track" />

            <TextView
                android:id="@+id/switchLabelHappiness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/happiness"
                android:textColor="@color/text_color"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switchOptimism"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                app:thumbTint="@drawable/custom_switch_thumb"
                app:trackTint="@drawable/other_switches_track" />

            <TextView
                android:id="@+id/switchLabelOptimism"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/optimism"
                android:textColor="@color/text_color"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switchKindness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                app:thumbTint="@drawable/custom_switch_thumb"
                app:trackTint="@drawable/other_switches_track" />

            <TextView
                android:id="@+id/switchLabelKindness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/kindness"
                android:textColor="@color/text_color"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switchGiving"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                app:thumbTint="@drawable/custom_switch_thumb"
                app:trackTint="@drawable/other_switches_track" />

            <TextView
                android:id="@+id/switchLabelGiving"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/giving"
                android:textColor="@color/text_color"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switchRespect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                app:thumbTint="@drawable/custom_switch_thumb"
                app:trackTint="@drawable/other_switches_track" />

            <TextView
                android:id="@+id/switchLabelRespect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/respect"
                android:textColor="@color/text_color"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switchEgo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:checked="true"
                app:thumbTint="@drawable/custom_switch_thumb"
                app:trackTint="@drawable/ego_switch_track" />

            <TextView
                android:id="@+id/switchLabelEgo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ego"
                android:textColor="@color/text_color"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>